# rust_multi_tenant

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yaml
master_migration/: Cargo.toml
master_migration/src/: lib.rs  m20240101_000001_create_tenants_table.rs  m20240101_000002_create_users_table.rs  m20240101_000003_create_permissions_table.rs  main.rs
src/: lib.rs  main.rs
src/controllers/: mod.rs
src/controllers/auth/: auth_controller.rs  mod.rs
src/controllers/tenants/: mod.rs  tenants_controller.rs
src/controllers/users/: mod.rs  users_controller.rs
src/database/: connection.rs  migrations.rs
src/entities/: mod.rs
src/entities/master/: lib.rs  permissions.rs  prelude.rs  tenants.rs  users.rs
src/entities/tenant/: mod.rs  orders.rs  prelude.rs  products.rs  users.rs
src/middlewares/: auth.rs  cors.rs  mod.rs
src/multi_tenancy/: master.rs  mod.rs  services.rs  tenant.rs  tenant_manager.rs
src/routes/: mod.rs
src/routes/auth_routes/: auth.rs  mod.rs
src/routes/tenant_routes/: mod.rs  tenants.rs
src/routes/user_routes/: mod.rs  users.rs
src/types/: mod.rs
src/types/config/: config_types.rs  mod.rs
src/types/shared/: mod.rs  shared_types.rs
src/types/users/: mod.rs  user_types.rs
tenant_migration/: Cargo.toml
tenant_migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_products_table.rs  m20240101_000003_create_orders_table.rs  main.rs
