[package]
name = "rust_multi_tenant"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "master_migration", "tenant_migration"]

[dependencies]
# Workspace Crates
master_migration = { path = "master_migration" }
tenant_migration = { path = "tenant_migration" }

# ENV
dotenv = "0.15.0"

# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# UUID
uuid = { version = "1.8.0", features = ["serde", "v4"] }

# Validation
validator = { version = "0.16.0", features = ["derive"] }

# Date/Time
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }

# Database
sea-orm = { version = "0.12.14", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-orm-migration = "0.12.14"

# Async Runtime
tokio = { version = "1.36.0", features = ["full"] }

# Web Framework
axum = { version = "0.7.4", features = ["macros"] }

# HTTP Utils
tower-http = { version = "0.5.1", features = ["cors", "full", "trace"] }
tower-cookies = "0.11.0"
http = "1.1.0"
reqwest = { version = "0.12.4", features = ["json"] }

# Logging
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "chrono",
    "env-filter",
    "json",
    "serde",
    "serde_json",
    "time",
    "tracing",
] }

# Error Handling Utils
thiserror = "1.0.57"
anyhow = "1.0.80"

# Hashing
argon2 = "0.5.3"
password-hash = "0.5"

#Float Value Handling
rust_decimal = { version = "1.34.0", features = ["serde", "serde-with-float"] }
rand = "0.8.5"
rand_distr = { version = "0.4.3", features = ["serde"] }

# JWT
jsonwebtoken = "9.2.0"
